Script replace image tag

--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -17,8 +17,8 @@ spec:
         run: whiteapp
     spec:
       containers:
-      - image: app-docker-scratch.registry.localhost/whiteapp:${TAG}
-        imagePullPolicy: IfNotPresent
+      - image: IMAGE:TAG
+        imagePullPolicy: Always
         name: whiteapp
       imagePullSecrets:
       - name: reg-creds
